--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,7 @@ html, body {
 }
 
 body {
-  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+  background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
 
   &.active-overlay {
     overflow: hidden;
