--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -2,14 +2,14 @@
   width: 100%;
   min-height: 100vh;
   padding: 70px 1rem 0;
-  background-color: #fff;
+  // background-color: #fff;
 
   .grid-container {
     display: grid;
     grid-template-areas: 'big big .' 'big big .';
     gap: 1.1rem;
     width: 100%;
-    height: 500px;
+    height: 550px;
     margin-top: 4rem;
 
     .grid-item:first-of-type {
@@ -17,12 +17,14 @@
     }
 
     .grid-item {
-      background-color: #bbb;
+      padding: 1.5rem;
+      // border: thin solid #e7edff;
+      background-color: #fff;
 
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         object-position: center center;
       }
     }
