--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -216,7 +216,7 @@
     width: 100%;
     height: 66px;
     padding: 0 1.5rem;
-    border-top: thin solid #eee;
+    border-top: thin solid #e7edff;
     background-color: #fff;
 
     .subtotal {
