--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,13 +5,13 @@
 
     <div class="grid-container">
       <div class="grid-item">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/71PGvPXpk5L._AC_SL1500_.jpg" alt="">
+        <img image-loader [src]="product.productImage" [alt]="product.productName">
       </div>
       <div class="grid-item">
-        <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/855/public/media/image/2016/09/ps4-slim_0.jpg?itok=p9wIGWxY" alt="">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/81aot0jAfFL._AC_SL1500_.jpg" alt="">
       </div>
       <div class="grid-item">
-        <img src="https://www.discoazul.com/uploads/media/images/consola-playstation-4-slim-1tb-13.jpg" alt="">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/718Pz9bYxWL._AC_SL1500_.jpg" alt="">
       </div>
     </div>
 
