--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -6,9 +6,9 @@
   .grid-container {
     display: grid;
     grid-template-areas: 'big big .' 'big big .';
-    gap: 1.1rem;
+    gap: 1.5rem;
     width: 100%;
-    height: 550px;
+    height: 600px;
     margin-top: 4rem;
 
     .grid-item:first-of-type {
@@ -18,6 +18,7 @@
     .grid-item {
       padding: 1.5rem;
       background-color: #fff;
+      overflow: hidden;
 
       img {
         width: 100%;
