--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -3,6 +3,8 @@
 <section class="product-detail-section">
   <div class="wrapper">
 
+    <h1 class="product-name">{{ product.productName }}</h1>
+
     <div class="grid-container">
       <div class="grid-item">
         <img image-loader [src]="product.productImage" [alt]="product.productName">
