--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -1,18 +1,29 @@
 .product-detail-section {
   width: 100%;
   min-height: 100vh;
+  margin: 4rem 0;
   padding: 70px 1rem 0;
+
+  .product-name {
+    margin-bottom: 2.5rem;
+    padding-bottom: 2rem;
+    color: #333;
+    font-size: 1.5rem;
+    font-weight: 300;
+    line-height: 2rem;
+    border-bottom: thin solid #fff;
+  }
 
   .grid-container {
     display: grid;
-    grid-template-areas: 'big big .' 'big big .';
+    grid-template-areas: '. big big' '. big big';
     gap: 1.5rem;
     width: 100%;
     height: 600px;
-    margin-top: 4rem;
 
     .grid-item:first-of-type {
       grid-area: big;
+      overflow: hidden;
     }
 
     .grid-item {
@@ -22,7 +33,7 @@
 
       img {
         width: 100%;
-        height: 100%;
+        max-height: 100%;
         object-fit: contain;
         object-position: center center;
       }
