--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -15,18 +15,31 @@
   }
 
   .grid-container {
-    display: grid;
-    grid-template-areas: '. big big' '. big big';
-    gap: 1.5rem;
+    display: flex;
     width: 100%;
     height: 600px;
 
-    .grid-item:first-of-type {
-      grid-area: big;
+    .small-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: calc(45% - 1.5rem);
+      margin-right: 1.5rem;
       overflow: hidden;
+
+      .item {
+        height: calc(50% - 0.75rem);
+      }
     }
 
-    .grid-item {
+    .big-container {
+      width: 55%;
+      overflow: hidden;
+    }
+    
+    .item {
+      width: 100%;
+      height: 100%;
       padding: 1.5rem;
       background-color: #fff;
       overflow: hidden;
