--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar">
   <div class="wrapper navbar-wrapper">
-    <a routerLink="/">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 192"><title>ic_material_192px_light</title><circle cx="96" cy="96" r="96" fill="#757575"/><path fill="#bdbdbd" d="M29 29h134v134H29z"/><path fill="#fff" d="M163 29L96 163 29 29h134z"/></svg>
+    <a routerLink="/" class="logo">
+      <span>A</span>
+      <span>rmazon</span>
     </a>
 
     <button (click)="openCart()" class="cart-btn">
