--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -7,17 +7,18 @@
   .product-name {
     margin-bottom: 2.5rem;
     padding-bottom: 2rem;
-    color: #333;
+    color: #222;
     font-size: 1.5rem;
     font-weight: 300;
     line-height: 2rem;
     border-bottom: thin solid #fff;
   }
 
-  .grid-container {
+  .product-image-container {
     display: flex;
     width: 100%;
     height: 600px;
+    user-select: none;
 
     .small-container {
       display: flex;
@@ -38,6 +39,8 @@
     }
     
     .item {
+      display: flex;
+      align-items: center;
       width: 100%;
       height: 100%;
       padding: 1.5rem;
@@ -49,6 +52,71 @@
         max-height: 100%;
         object-fit: contain;
         object-position: center center;
+      }
+    }
+  }
+
+  .product-details-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-top: 1.5rem;
+    padding: 1.5rem;
+    background-color: #fff;
+
+    .info {
+      width: 45%;
+
+      p:not(:last-of-type) {
+        margin-bottom: 1rem;
+      }
+
+      .price {
+        margin-bottom: 1rem;
+        color: #555;
+        font-size: 1rem;
+        font-weight: 600;
+      }  
+    }
+
+    .action-buttons {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 45%;
+
+      button {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 200px;
+        height: 40px;
+        border: 2px solid #F98A95;
+      }
+
+      .buy-now-btn {
+        margin-right: 1rem;
+        color: #fff;
+        background-color: #F98A95;
+      }
+
+      .add-to-cart-btn {
+        span {
+          color: #F98A95
+        }
+
+        .material-icons {
+          color: #F98A95;
+          transition: color .3s ease;
+        }
+
+        &:hover {
+          .material-icons {
+            color: #333;
+          }
+        }
       }
     }
   }
