--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -148,7 +148,7 @@
         .product-name {
           display: block;
           margin-bottom: 0.5rem;
-          color: royalblue;
+          color: #2587f7;
           font-size: 1rem;
           font-weight: 400;
           line-height: 1.5rem;
@@ -249,7 +249,6 @@
   }
 }
 
-
 @media (max-width: 746px) {
   .cart {
     width: 100%;
@@ -262,7 +261,7 @@
       .product-name {
         display: block;
         margin-bottom: 0.5rem;
-        color: royalblue;
+        color: #2587f7;
         font-size: 1rem;
         font-weight: 400;
         line-height: 1.5rem;
