--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -14,7 +14,7 @@
     align-items: center;
     height: inherit;
     margin: auto;
-    // padding: 0 1rem;
+    padding: 0 1rem;
   }
 
   .logo {
@@ -70,7 +70,7 @@
       font-size: .8rem;
       font-weight: 600;
       white-space: nowrap;
-      background-color: #ff667a;
+      background-color: #2587f7;
       box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
       animation: reveal 0.4s ease;
       overflow: hidden;
