--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -40,7 +40,7 @@
         .product-name {
           display: block;
           margin-bottom: 1rem;
-          color: royalblue;
+          color: #2587f7;
           font-size: 1rem;
           font-weight: 400;
           line-height: 1.5rem;
