--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -59,7 +59,7 @@
   .product-details-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
     margin-top: 1.5rem;
     padding: 1.5rem;
@@ -77,13 +77,28 @@
         font-size: 1rem;
         font-weight: 600;
       }  
+
+      .desc {
+        max-width: 500px;
+        margin-top: 1.5rem;
+        overflow: hidden;
+        
+        h3 {
+          margin-bottom: 0.5rem;
+        }
+
+        p {
+          line-height: 1.4rem;
+        }
+      }
     }
 
     .action-buttons {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 424px;
+      width: 364px;
+      margin-left: 2rem;
 
       button {
         flex-shrink: 0;
@@ -91,9 +106,25 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 200px;
+        width: 170px;
         height: 40px;
         border: 2px solid #F72551;
+
+        &::after {
+          content: '';
+          opacity: 0;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          box-shadow: 0 6px 25px rgba(248, 96, 129, 0.815);
+          transition: opacity .4s ease;
+        }
+
+        &:hover::after {
+          opacity: 1;
+        }
       }
 
       .buy-now-btn {
@@ -109,13 +140,6 @@
 
         .material-icons {
           color: #F72551;
-          transition: color .3s ease;
-        }
-
-        &:hover {
-          .material-icons {
-            color: #333;
-          }
         }
       }
     }
