--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,4 +1,4 @@
-<!-- <app-spinner [loading]="isLoading"></app-spinner> -->
+<app-spinner [loading]="isLoading" overlayStyle="fixed"></app-spinner>
 
 <section class="product-detail-section">
   <div class="wrapper">
