--- a/src/app/shared/spinner/spinner.component.scss
+++ b/src/app/shared/spinner/spinner.component.scss
@@ -20,6 +20,11 @@
   animation: reveal 0.4s ease;
   z-index: 10;
 
+  &.fixed {
+    position: fixed;
+    z-index: 1000;
+  }
+
   .spinner {
     position: relative;
     width: 45px;
