--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -59,7 +59,7 @@
   .product-details-container {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     margin-top: 1.5rem;
     padding: 1.5rem;
@@ -74,7 +74,7 @@
       .price {
         margin-bottom: 1rem;
         color: #555;
-        font-size: 1rem;
+        font-size: 1.2rem;
         font-weight: 600;
       }  
 
