--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -45,6 +45,7 @@
       height: 100%;
       padding: 1.5rem;
       background-color: #fff;
+      box-shadow: 0 0 25px rgba(190, 190, 190, 0.2);
       overflow: hidden;
 
       img {
@@ -64,6 +65,7 @@
     margin-top: 1.5rem;
     padding: 1.5rem;
     background-color: #fff;
+    box-shadow: 0 0 25px rgba(190, 190, 190, 0.2);
     overflow: hidden;
 
     .info {
