--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,6 +1,68 @@
 .products-section {
-  margin: 4rem 0;
+  margin: 2rem 0;
   padding: 70px 1rem 0;
+
+  .banner {
+    position: relative;
+    width: 100%;
+    height: 250px;
+    margin-bottom: 3rem;
+    overflow: hidden;
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+
+    .banner-text {
+      position: absolute;
+      left: 2rem;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 50%;
+      z-index: 1;
+
+      h3, p {
+        margin-bottom: 1.5rem;
+        color: #fff;
+        text-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+      }
+      
+      h3 {
+        font-size: 2.5rem;
+        font-weight: 600;
+        line-height: 2.5rem;        
+      }
+
+      p {
+        font-size: 1rem;
+        font-weight: 300;
+        line-height: 1.6rem;  
+      }
+
+      button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 170px;
+        height: 40px;
+        color: #fff;
+        border: 2px solid #F72551;
+      }
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
+    }
+  }
 
   .products {
     display: grid;
