--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -175,7 +175,7 @@
             padding: 0.2rem;
             text-align: center;
             border-radius: 6px;
-            background-color: #fff0eb;
+            background-color: #e7edff;
           }
           
           .remove-btn {
@@ -189,7 +189,7 @@
               transform: scaleX(0);
               width: 100%;
               height: 1px;
-              background-color: #444;
+              background-color: #F72551;
               transition: transform .2s ease;
             }
         
