--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -146,7 +146,7 @@
             transform: scaleX(0);
             width: 100%;
             height: 1px;
-            background-color: #444;
+            background-color: #F72551;
             transition: transform .2s ease;
           }
       
@@ -157,7 +157,7 @@
 
         .add-to-cart-btn {
           .material-icons {
-            color: #666;
+            color: #F72551;
             transition: color .3s ease;
           }
 
