--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -111,7 +111,8 @@
     padding: 1rem 0;
     overflow: hidden;
     overflow-y: auto;
-    scrollbar-width: 0;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 
     &::-webkit-scrollbar {
       display: none;
