--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -38,7 +38,7 @@
     user-select: none;
     
     h3 {
-      color: #5c5c5c;
+      color: #979eb3;
       font-size: 1rem;
       font-weight: 500;
     }
@@ -53,7 +53,7 @@
     padding: 0 1.5rem;
 
     p {
-      color: #555;
+      color: #7a8196;
       font-size: 1rem;
     }
 
@@ -61,14 +61,14 @@
       margin-left: auto;
 
       .material-icons {
-        color: #666;
+        color: #7a8196;
         font-size: 1.4rem;
         transition: color .2s ease;
       }
 
       &:hover {
         .material-icons {
-          color: #333;
+          color: darken(#7a8196, 15);
         }
       }
     }
@@ -237,7 +237,7 @@
       }
     }
 
-    button {
+    .checkout-btn {
       position: relative;
       margin-left: auto;
 
@@ -249,7 +249,7 @@
         transform: scaleX(0);
         width: 100%;
         height: 1px;
-        background-color: #444;
+        background-color: #F72551;
         transition: transform .2s ease;
       }
   
@@ -302,7 +302,7 @@
         width: 100%;
       }
   
-      button {
+      .checkout-btn {
         margin: 0;
         margin-top: 1rem;
         position: relative;
