--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -73,7 +73,6 @@
       position: relative;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
       width: 100%;
       background-color: #fff;
       box-shadow: 0 0 25px rgba(190, 190, 190, 0.2);
@@ -82,9 +81,10 @@
       .product-image {
         display: block;
         width: 100%;
-        height: 230px;
-        padding: 1.5rem;
+        height: 250px;
+        padding: 1rem;
         background-color: #fff;
+        // background-color: #555;
 
         img {
           height: 100%;
@@ -94,7 +94,11 @@
       }
 
       .product-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         width: 100%;
+        height: 100%;
         padding: 1.5rem;
         background-color: #fff;
         overflow: hidden;
@@ -103,7 +107,7 @@
           display: block;
           margin-bottom: 1rem;
           color: #2587f7;
-          font-size: 1rem;
+          font-size: .95rem;
           font-weight: 400;
           line-height: 1.5rem;
           overflow: hidden;
@@ -116,14 +120,14 @@
         }
 
         .price {
-          margin-bottom: 1rem;
+          margin-bottom: 0.5rem;
           color: #333;
           font-size: 1rem;
           font-weight: 600;
         }
 
         .stock-label {
-          color: #ec9045;
+          color: #4da861;
         }
       }
 
@@ -132,7 +136,8 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        margin-top: 2rem;
+        padding: 1.5rem;
+        // margin-top: 2rem;
 
         .buy-now-btn {
           position: relative;
