--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -120,7 +120,6 @@
 
     li {
       display: flex;
-      align-items: center;
       width: inherit;
       padding: 1.5rem 0;
       
@@ -150,7 +149,7 @@
           display: block;
           margin-bottom: 0.5rem;
           color: #2587f7;
-          font-size: 1rem;
+          font-size: .95rem;
           font-weight: 400;
           line-height: 1.5rem;
           overflow: hidden;
@@ -162,6 +161,11 @@
           color: #333;
           font-size: 1rem;
           font-weight: 600;
+        }
+
+        .stock-label {
+          margin-bottom: 0.5rem;
+          color: #4da861;
         }
 
         .options {
