--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -7,9 +7,9 @@
   .product-name {
     margin-bottom: 2.5rem;
     padding-bottom: 2rem;
-    color: #222;
+    color: #2587f7;
     font-size: 1.5rem;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 2rem;
     border-bottom: thin solid #fff;
   }
