--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -50,7 +50,7 @@
 
         <button 
           (click)="onAddToCart(product.productId)"
-          type="button" class="add-to-cart-btn" title="Add to Cart">
+          type="button" class="add-to-cart-btn">
           <i class="material-icons">add_shopping_cart</i>
           <span>Add to cart</span>
         </button>
