--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -76,6 +76,7 @@
       .product-name {
         font-size: 1rem;
         font-weight: 500;
+        line-height: 1.4rem;
       }
 
       .price {
