--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -3,6 +3,14 @@
 <section *ngIf="!isLoading" class="product-detail-section">
   <div class="wrapper">
 
+    <!--  -->
+
+    <input 
+      (change)="onChange($event.target)"
+      type="file" name="product-image" id="product-image">
+
+    <!--  -->
+
     <h1 class="product-name-xl">{{ product.productName }}</h1>
 
     <section class="product-image-container">
