--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -7,7 +7,7 @@
 
     <input 
       (change)="onChange($event.target)"
-      type="file" name="product-image" id="product-image">
+      type="file" name="product-image" id="product-image" multiple>
 
     <!--  -->
 
