--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,3 +1,9 @@
-<h1>Admin Page</h1>
-
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <main>
+    <a routerLink="/">Product list</a>
+    <span> | </span>
+    <a routerLink="./product-creation">Add new product</a>
+  </main>
+  
+  <router-outlet></router-outlet>
+</div>
