--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -1,3 +1,10 @@
 <section class="product-form-section">
+
+  <form [formGroup]="productForm">
+    <div class="form-group">
+      <label>Product name</label>
+      <input formControlName="productName" type="text">
+    </div>
+  </form>
   
 </section>
