--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -1,10 +1,54 @@
 <section class="product-form-section">
 
-  <form [formGroup]="productForm">
-    <div class="form-group">
-      <label>Product name</label>
-      <input formControlName="productName" type="text">
+  <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
+    <div class="column-s">
+      <div class="form-group">
+        <label>Product name</label>
+        <input formControlName="productName">
+      </div>
+  
+      <div class="form-group">
+        <label>Brand</label>
+        <input formControlName="brand">
+      </div>
+
+      <div class="form-group">
+        <label>Price</label>
+        <input formControlName="price" type="number" min="0" step="0.1">
+      </div>
+
+      <div class="form-group">
+        <label>Category</label>
+        <select formControlName="categoryId">
+          <option 
+            *ngFor="let category of categories" 
+            [value]="category.categoryId">
+            {{ category.category }}
+          </option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label>Description</label>
+        <textarea formControlName="productDesc" cols="30" rows="10"></textarea>
+      </div>
+
+      <div class="form-group">
+        <label>Total in stock</label>
+        <input formControlName="totalStock" min="0">
+      </div>
+  
+      <div class="form-group">
+        <button type="submit">Add to inventory</button>
+      </div>
+    </div>
+
+    <div class="column-l">
+      <label>
+        <input type="file" formControlName="images" multiple>
+        <span>Choose images</span>
+      </label>
     </div>
   </form>
-  
+
 </section>
