--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -1,3 +1,74 @@
 .product-form-section {
-  padding: 70px 1rem 0;
+  padding: 2rem 1rem 0;
+
+  #productForm {
+    display: flex;
+    width: 100%;
+    font-size: 0.85rem;
+
+    .column-s {
+      padding: 4rem;
+      background-color: #fff;
+
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+  
+        &:not(:last-of-type) {
+          margin-bottom: 1rem;
+        }
+  
+        label {
+          margin-bottom: 0.3rem;
+        } 
+
+        input, textarea, select {
+          width: 100%;
+          padding: 0.4rem;
+          font-size: 0.8rem;
+          background-color: #eef1f5;
+        }
+
+        textarea {
+          resize: none;
+        }
+
+        button {
+          position: relative;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: 30px;
+          color: #fff;
+          font-size: 0.85rem;
+          border: 2px solid #F72551;
+          background-color: #F72551;
+        }
+      }
+    }
+
+    .column-l {
+      flex: 1;
+      background-color: #f7f9fd;
+      user-select: none;
+
+      .image-selector {
+        display: block;
+        background-color: royalblue;
+        width: fit-content;
+        padding: 0.4rem 1rem;
+        cursor: pointer;
+        
+        span {
+          color: #fff;
+        }
+
+        input {
+          display: none;
+        }
+      }
+    }
+  }
 }
