--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -4,9 +4,13 @@
   #productForm {
     display: flex;
     width: 100%;
+    max-height: 620px;
     font-size: 0.85rem;
+    overflow: hidden;
 
     .column-s {
+      flex-shrink: 0;
+      width: 400px;
       padding: 4rem;
       background-color: #fff;
 
@@ -27,7 +31,13 @@
           width: 100%;
           padding: 0.4rem;
           font-size: 0.8rem;
+          border: thin solid #eef1f5;
           background-color: #eef1f5;
+          transition: border-color 0.3s ease;
+          
+          &:focus {
+            border-color: #F72551;
+          }
         }
 
         textarea {
@@ -40,33 +50,128 @@
           justify-content: center;
           align-items: center;
           width: 100%;
-          height: 30px;
+          padding: 0.4rem 0.1rem;
           color: #fff;
-          font-size: 0.85rem;
           border: 2px solid #F72551;
           background-color: #F72551;
+
+          &::after {
+            content: '';
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            box-shadow: 0 6px 25px rgba(248, 96, 129, 0.815);
+            transition: opacity .4s ease;
+          }
+  
+          &:hover::after {
+            opacity: 1;
+          }
         }
       }
     }
 
     .column-l {
+      position: relative;
       flex: 1;
+      width: 1;
+      height: inherit;
       background-color: #f7f9fd;
       user-select: none;
+      
+      h3 {
+        padding: 1.5rem;
+        font-size: 1.1rem;
+        font-weight: 400;
+      }
+
+      .scrollable-area {
+        position: absolute;
+        width: 100%;
+        height: calc(620px - 65px);
+        padding: 1.5rem;
+        overflow: hidden;
+        overflow-y: auto;
+        scrollbar-width: none;
+        -ms-overflow-style: none;        
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 65px;
+        width: 100%;
+        height: 1.5rem;
+        background: linear-gradient(#f7f9fd 30%, transparent);
+        z-index: 1;
+      }
+  
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 1.5rem;
+        background: linear-gradient(transparent, #f7f9fd 60%);
+        z-index: 1;
+      }
+
+      .preview-list {
+        position: relative;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 170px);
+        gap: 1rem;
+        width: 100%;
+        height: auto;       
+
+        &.alternate {
+          grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+        }
+      }
+
+      .image-selector, .preview {
+        height: 150px;
+        border-radius: 4px;
+        border: thin solid #e3e6ec;
+      }
 
       .image-selector {
-        display: block;
-        background-color: royalblue;
-        width: fit-content;
-        padding: 0.4rem 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         cursor: pointer;
+        transition: background-color 0.3s ease;
+
+        &:hover {
+          background-color: darken(#e3e6ec, 1);
+        }
         
-        span {
-          color: #fff;
+        .material-icons {
+          color: #555;
         }
 
         input {
           display: none;
+        }
+      }
+
+      .preview {
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center center;
         }
       }
     }
