--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.html
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.html
@@ -3,13 +3,14 @@
 
   <div class="scrollable-area">
     <ul class="preview-list">
-      <!-- <li 
+      <li 
         *ngFor="let preview of previews" 
         class="preview"
         [class.alternate]="previews.length > 3">
         <img [src]="preview" draggable="false">
-      </li> -->
+      </li>
 
+      <!-- <li class="preview"></li>
       <li class="preview"></li>
       <li class="preview"></li>
       <li class="preview"></li>
@@ -23,8 +24,7 @@
       <li class="preview"></li>
       <li class="preview"></li>
       <li class="preview"></li>
-      <li class="preview"></li>
-      <li class="preview"></li>
+      <li class="preview"></li> -->
 
       <label class="image-selector">
         <input type="file" multiple>
