--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -108,6 +108,7 @@
 
   .preview {
     position: relative;
+    background-color: #fff;
     animation: fileAdded 0.3s ease;
     overflow: hidden;
 
