--- a/src/app/admin-page/product-creation/product-creation.component.html
+++ b/src/app/admin-page/product-creation/product-creation.component.html
@@ -5,7 +5,7 @@
     (ngSubmit)="onSubmit()"
     id="productForm">
     <app-spinner [loading]="isLoading"></app-spinner>
-    
+
     <div class="column-s">
       <div class="form-group">
         <label>Product name</label>
@@ -44,7 +44,9 @@
       </div>
   
       <div class="form-group">
-        <button type="submit">Add to inventory</button>
+        <button 
+          [disabled]="productForm.invalid" 
+          type="submit">Add to inventory</button>
       </div>
     </div>
 
