--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -149,3 +149,13 @@
     }
   }
 }
+
+@media (max-width: 900px) {
+  .container {
+    height: 620px;
+  
+    .preview-list {
+      grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    }
+  }
+}
