--- a/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
+++ b/src/app/admin-page/product-creation/image-uploader/image-uploader.component.scss
@@ -25,15 +25,32 @@
   height: inherit;
 
   h3 {
-    padding: 1.5rem;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 4rem;
     font-size: 1.1rem;
     font-weight: 400;
+    background-color: #fff;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -1.5rem;
+      width: 100%;
+      height: 1.5rem;
+      background: linear-gradient(#f7f9fd 30%, transparent);
+      z-index: 1;
+    }
   }
 
   .scrollable-area {
     position: absolute;
     width: 100%;
-    height: calc(620px - 65px);
+    height: calc(642px - 4rem);
     padding: 1.5rem;
     overflow: hidden;
     overflow-y: auto;
@@ -46,17 +63,6 @@
   }
 
   &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 65px;
-    width: 100%;
-    height: 1.5rem;
-    background: linear-gradient(#f7f9fd 30%, transparent);
-    z-index: 1;
-  }
-
-  &::after {
     content: '';
     position: absolute;
     left: 0;
@@ -84,6 +90,10 @@
     height: 150px;
     border-radius: 4px;
     border: thin solid #e3e6ec;
+  }
+
+  .preview {
+    padding: 0.5rem;
   }
 
   .image-selector {
@@ -152,7 +162,7 @@
 
 @media (max-width: 900px) {
   .container {
-    height: 620px;
+    height: 642px;
   
     .preview-list {
       grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
